helm/identity/manifests/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oidc-nginx-proxy
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oidc-nginx-proxy
  template:
    metadata:
      labels:
        app: oidc-nginx-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.5
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-oidc-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: oidc-nginx-proxy
  namespace: default
spec:
  selector:
    app: oidc-nginx-proxy
  ports:
    - port: 80
      targetPort: 80
